Added async function

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-POSTGRES_CONNECTION_STRING = "secret"
+POSTGRES_CONNECTION_STRING = "postgresql://samina:v2_3zULZ_aiG42A9enAE8dk2kZ8szA2k@db.bit.io:5432/samina/books?sslmode=require"
